Add a test region, !cliptestregion

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 	<script src="https://alca.tv/static/twitch/u/twitch-js-v2.5.7.min.js"></script>
 </head>
 <body>
+	<div id="clip-test-attachment">
+		<div id="test-region"></div>
+	</div>
 	<div id="clip-attachment"></div>
 	<script src="js/index.js"></script>
 </body>
