Start test region as display: none

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script src="https://alca.tv/static/twitch/u/twitch-js-v2.5.7.min.js"></script>
 </head>
 <body>
-	<div id="clip-test-attachment">
+	<div id="clip-test-attachment" style="display: none">
 		<div id="test-region"></div>
 	</div>
 	<div id="clip-attachment"></div>
